pair switch & boosting & pair switch evaluation

--- a/Evaluation/Example - Loading Model and Trasfer Attack.ipynb
+++ b/Evaluation/Example - Loading Model and Trasfer Attack.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/ubuntu/FedEM\n"
+      "/home/ubuntu/Documents/jiarui/pFedDef_v1\n"
      ]
     }
    ],
    "source": [
-    "cd /home/ubuntu/FedEM/"
+    "cd /home/ubuntu/Documents/jiarui/pFedDef_v1 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 719/719 [00:07<00:00, 96.13it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:00<00:00, 162.73it/s]\n"
      ]
     },
     {
@@ -80,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 719/719 [00:10<00:00, 71.79it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:05<00:00,  6.79it/s]\n"
      ]
     },
     {
@@ -118,7 +118,7 @@
      "text": [
       "++++++++++++++++++++++++++++++\n",
       "Global..\n",
-      "Train Loss: 4.147 | Train Acc: 1.769% |Test Loss: 4.146 | Test Acc: 1.699% |\n",
+      "Train Loss: 2.299 | Train Acc: 10.514% |Test Loss: 2.298 | Test Acc: 11.018% |\n",
       "++++++++++++++++++++++++++++++++++++++++++++++++++\n",
       "################################################################################\n"
      ]
@@ -127,7 +127,7 @@
    "source": [
     "# Generating Empty Aggregator to be loaded \n",
     "\n",
-    "setting = 'local'\n",
+    "setting = 'FedAvg'\n",
     "\n",
     "if setting == 'FedEM':\n",
     "    nL = 3\n",
@@ -136,7 +136,7 @@
     "\n",
     "# Manually set argument parameters\n",
     "args_ = Args()\n",
-    "args_.experiment = \"femnist\"\n",
+    "args_.experiment = \"cifar10\"\n",
     "args_.method = setting\n",
     "args_.decentralized = False\n",
     "args_.sampling_rate = 1.0\n",
@@ -162,12 +162,12 @@
     "args_.validation = False\n",
     "\n",
     "# Generate the dummy values here\n",
-    "aggregator, clients = dummy_aggregator(args_, num_user=300)"
+    "aggregator, clients = dummy_aggregator(args_, num_user=40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,13 +187,26 @@
     "    data_y = torch.stack(data_y)        \n",
     "except:\n",
     "    data_y = torch.FloatTensor(data_y) \n",
+    "\n",
+    "    \n",
+    "# mask_cat = data_y==3\n",
+    "# mask_dog = data_y==5\n",
+    "# data_x = torch.cat(\n",
+    "#     (data_x[mask_cat], data_x[mask_dog]),\n",
+    "#     0\n",
+    "# )\n",
+    "# data_y = torch.cat(\n",
+    "#     (data_y[mask_cat], data_y[mask_dog]),\n",
+    "#     0\n",
+    "# )\n",
+    "    \n",
     "    \n",
     "dataloader = Custom_Dataloader(data_x, data_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +239,7 @@
     "elif setting == 'FedAvg':\n",
     "    \n",
     "#     args_.save_path = 'weights/final/femnist/fig1_take3/fedavg_benign/'\n",
-    "    args_.save_path = 'weights/final/femnist/fig1_take3/FedAvg_adv/'\n",
+    "    args_.save_path = '/home/ubuntu/Documents/jiarui/experiments/pFedDef/weights/cifar10/FedAvg_label_switch/pfeddef'\n",
     "    aggregator.load_state(args_.save_path)\n",
     "    \n",
     "    # This is where the models are stored -- one for each mixture --> learner.model for nn\n",
@@ -239,7 +252,7 @@
     "        weights_h += [h.model.state_dict()]\n",
     "\n",
     "#     weights = np.load(\"weights/final/femnist/fig1_take3/fedavg_benign/train_client_weights.npy\")\n",
-    "    weights = np.load('weights/final/femnist/fig1_take3/FedAvg_adv/train_client_weights.npy')\n",
+    "    weights = np.load('/home/ubuntu/Documents/jiarui/experiments/pFedDef/weights/cifar10/FedAvg_label_switch/pfeddef/train_client_weights.npy')\n",
     "    \n",
     "    # Set model weights\n",
     "    model_weights = []\n",
@@ -303,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,6 +498,154 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.73, 0.73, 0.73, 0.73, 0.73, 0.73, 0.73, 0.73, 0.73, 0.73],\n",
+       "       [0.71, 0.71, 0.71, 0.71, 0.71, 0.71, 0.71, 0.71, 0.71, 0.71],\n",
+       "       [0.85, 0.85, 0.85, 0.85, 0.85, 0.85, 0.85, 0.85, 0.85, 0.85],\n",
+       "       [0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75],\n",
+       "       [0.76, 0.76, 0.76, 0.76, 0.76, 0.76, 0.76, 0.76, 0.76, 0.76],\n",
+       "       [0.83, 0.83, 0.83, 0.83, 0.83, 0.83, 0.83, 0.83, 0.83, 0.83],\n",
+       "       [0.76, 0.76, 0.76, 0.76, 0.76, 0.76, 0.76, 0.76, 0.76, 0.76],\n",
+       "       [0.73, 0.73, 0.73, 0.73, 0.73, 0.73, 0.73, 0.73, 0.73, 0.73],\n",
+       "       [0.84, 0.84, 0.84, 0.84, 0.84, 0.84, 0.84, 0.84, 0.84, 0.84],\n",
+       "       [0.74, 0.74, 0.74, 0.74, 0.74, 0.74, 0.74, 0.74, 0.74, 0.74]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orig_acc[:10, :10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.save(\"/home/ubuntu/Documents/jiarui/experiments/pFedDef/weights/cifar10/FedAvg_all_label_switch/pfeddef/acc.npy\", orig_acc)\n",
+    "np.save(\"/home/ubuntu/Documents/jiarui/pFedDef_v1/eval/switch_label_catdog_data.npy\", orig_acc)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fedavg\n",
+      "[[0.87 0.87 0.87 0.87 0.87 0.87 0.87 0.87 0.87 0.87]\n",
+      " [0.81 0.81 0.81 0.81 0.81 0.81 0.81 0.81 0.81 0.81]\n",
+      " [0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86]\n",
+      " [1.00 1.00 1.00 1.00 1.00 1.00 1.00 1.00 1.00 1.00]\n",
+      " [0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80]\n",
+      " [0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84]\n",
+      " [0.81 0.81 0.81 0.81 0.81 0.81 0.81 0.81 0.81 0.81]\n",
+      " [0.79 0.79 0.79 0.79 0.79 0.79 0.79 0.79 0.79 0.79]\n",
+      " [0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86]\n",
+      " [0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82]]\n",
+      "swith all label - prev\n",
+      "[[0.44 0.44 0.44 0.44 0.44 0.44 0.44 0.44 0.44 0.44]\n",
+      " [0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41]\n",
+      " [0.50 0.50 0.50 0.50 0.50 0.50 0.50 0.50 0.50 0.50]\n",
+      " [0.25 0.25 0.25 0.25 0.25 0.25 0.25 0.25 0.25 0.25]\n",
+      " [0.37 0.37 0.37 0.37 0.37 0.37 0.37 0.37 0.37 0.37]\n",
+      " [0.46 0.46 0.46 0.46 0.46 0.46 0.46 0.46 0.46 0.46]\n",
+      " [0.53 0.53 0.53 0.53 0.53 0.53 0.53 0.53 0.53 0.53]\n",
+      " [0.31 0.31 0.31 0.31 0.31 0.31 0.31 0.31 0.31 0.31]\n",
+      " [0.47 0.47 0.47 0.47 0.47 0.47 0.47 0.47 0.47 0.47]\n",
+      " [0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41]]\n",
+      "swith all label - modified\n",
+      "[[0.44 0.44 0.44 0.44 0.44 0.44 0.44 0.44 0.44 0.44]\n",
+      " [0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41]\n",
+      " [0.50 0.50 0.50 0.50 0.50 0.50 0.50 0.50 0.50 0.50]\n",
+      " [0.25 0.25 0.25 0.25 0.25 0.25 0.25 0.25 0.25 0.25]\n",
+      " [0.39 0.39 0.39 0.39 0.39 0.39 0.39 0.39 0.39 0.39]\n",
+      " [0.46 0.46 0.46 0.46 0.46 0.46 0.46 0.46 0.46 0.46]\n",
+      " [0.53 0.53 0.53 0.53 0.53 0.53 0.53 0.53 0.53 0.53]\n",
+      " [0.31 0.31 0.31 0.31 0.31 0.31 0.31 0.31 0.31 0.31]\n",
+      " [0.47 0.47 0.47 0.47 0.47 0.47 0.47 0.47 0.47 0.47]\n",
+      " [0.42 0.42 0.42 0.42 0.42 0.42 0.42 0.42 0.42 0.42]]\n",
+      "switch pair - 20 clients\n",
+      "[[0.73 0.73 0.73 0.73 0.73 0.73 0.73 0.73 0.73 0.73]\n",
+      " [0.71 0.71 0.71 0.71 0.71 0.71 0.71 0.71 0.71 0.71]\n",
+      " [0.85 0.85 0.85 0.85 0.85 0.85 0.85 0.85 0.85 0.85]\n",
+      " [0.75 0.75 0.75 0.75 0.75 0.75 0.75 0.75 0.75 0.75]\n",
+      " [0.74 0.74 0.74 0.74 0.74 0.74 0.74 0.74 0.74 0.74]\n",
+      " [0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83]\n",
+      " [0.76 0.76 0.76 0.76 0.76 0.76 0.76 0.76 0.76 0.76]\n",
+      " [0.73 0.73 0.73 0.73 0.73 0.73 0.73 0.73 0.73 0.73]\n",
+      " [0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84]\n",
+      " [0.72 0.72 0.72 0.72 0.72 0.72 0.72 0.72 0.72 0.72]]\n",
+      "switch pair - 40 clients\n",
+      "[[0.65 0.65 0.65 0.65 0.65 0.65 0.65 0.65 0.65 0.65]\n",
+      " [0.65 0.65 0.65 0.65 0.65 0.65 0.65 0.65 0.65 0.65]\n",
+      " [0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80]\n",
+      " [0.75 0.75 0.75 0.75 0.75 0.75 0.75 0.75 0.75 0.75]\n",
+      " [0.69 0.69 0.69 0.69 0.69 0.69 0.69 0.69 0.69 0.69]\n",
+      " [0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80]\n",
+      " [0.65 0.65 0.65 0.65 0.65 0.65 0.65 0.65 0.65 0.65]\n",
+      " [0.73 0.73 0.73 0.73 0.73 0.73 0.73 0.73 0.73 0.73]\n",
+      " [0.85 0.85 0.85 0.85 0.85 0.85 0.85 0.85 0.85 0.85]\n",
+      " [0.61 0.61 0.61 0.61 0.61 0.61 0.61 0.61 0.61 0.61]]\n",
+      "boost x20 - prev\n",
+      "[[0.81 0.81 0.81 0.81 0.81 0.81 0.81 0.81 0.81 0.81]\n",
+      " [0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84]\n",
+      " [0.85 0.85 0.85 0.85 0.85 0.85 0.85 0.85 0.85 0.85]\n",
+      " [1.00 1.00 1.00 1.00 1.00 1.00 1.00 1.00 1.00 1.00]\n",
+      " [0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82]\n",
+      " [0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84]\n",
+      " [0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83]\n",
+      " [0.79 0.79 0.79 0.79 0.79 0.79 0.79 0.79 0.79 0.79]\n",
+      " [0.85 0.85 0.85 0.85 0.85 0.85 0.85 0.85 0.85 0.85]\n",
+      " [0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83]]\n",
+      "boost x20 - modified\n",
+      "[[0.88 0.88 0.88 0.88 0.88 0.88 0.88 0.88 0.88 0.88]\n",
+      " [0.79 0.79 0.79 0.79 0.79 0.79 0.79 0.79 0.79 0.79]\n",
+      " [0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86]\n",
+      " [1.00 1.00 1.00 1.00 1.00 1.00 1.00 1.00 1.00 1.00]\n",
+      " [0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82]\n",
+      " [0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84 0.84]\n",
+      " [0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83]\n",
+      " [0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80]\n",
+      " [0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82]\n",
+      " [0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"fedavg\")\n",
+    "print(np.load(\"/home/ubuntu/Documents/jiarui/pFedDef_v1/eval/fedavg.npy\")[:10, :10])\n",
+    "print(\"swith all label - prev\")\n",
+    "print(np.load(\"/home/ubuntu/Documents/jiarui/pFedDef_v1/eval/all_switch.npy\")[:10, :10])\n",
+    "print(\"swith all label - modified\")\n",
+    "print(np.load(\"/home/ubuntu/Documents/jiarui/experiments/pFedDef/weights/cifar10/FedAvg_all_label_switch/pfeddef/acc.npy\")[:10, :10])\n",
+    "print(\"switch pair - 20 clients\")\n",
+    "print(np.load(\"/home/ubuntu/Documents/jiarui/pFedDef_v1/eval/switch_label.npy\")[:10, :10])\n",
+    "print(\"switch pair - 40 clients\")\n",
+    "print(np.load(\"/home/ubuntu/Documents/jiarui/experiments/FedAvg/cifar10/switchPair40/eval/acc.npy\")[:10, :10])\n",
+    "print(\"boost x20 - prev\")\n",
+    "print(np.load(\"/home/ubuntu/Documents/jiarui/pFedDef_v1/eval/boost.npy\")[:10, :10])\n",
+    "print(\"boost x20 - modified\")\n",
+    "print(orig_acc[:10, :10])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -507,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.15"
   }
  },
  "nbformat": 4,
