eval utilities and log records

--- a/Evaluation/Example - Loading Model and Trasfer Attack.ipynb
+++ b/Evaluation/Example - Loading Model and Trasfer Attack.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:00<00:00, 172.52it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:00<00:00, 158.15it/s]\n"
      ]
     },
     {
@@ -80,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:06<00:00,  6.15it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:05<00:00,  6.85it/s]\n"
      ]
     },
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
     "\n",
     "elif setting == 'FedAvg':\n",
     "    \n",
-    "    root_path = \"/home/ubuntu/Documents/jiarui/experiments/FedAvg/cifar10/rep_lr_0010/weights\"\n",
+    "    root_path = \"/home/ubuntu/Documents/jiarui/experiments/FedAvg/cifar10/rep__client_w_lr_050/weights\"\n",
     "    \n",
     "#     args_.save_path = 'weights/final/femnist/fig1_take3/fedavg_benign/'\n",
     "    args_.save_path = root_path\n",
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 71,
    "metadata": {
     "scrolled": false
    },
@@ -412,7 +412,7 @@
     "        clients = clients, \n",
     "        c_id = adv_idx, \n",
     "        mode = 'test',\n",
-    "        switch = True\n",
+    "        switch = False\n",
     "    ) # or test/train\n",
     "    \n",
     "    batch_size = min(custom_batch_size, dataloader.y_data.shape[0])\n",
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,25 +526,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.44, 0.44, 0.44, 0.44, 0.44, 0.44, 0.44, 0.44, 0.44, 0.44],\n",
-       "       [0.40, 0.40, 0.40, 0.40, 0.40, 0.40, 0.40, 0.40, 0.40, 0.40],\n",
-       "       [0.15, 0.15, 0.15, 0.15, 0.15, 0.15, 0.15, 0.15, 0.15, 0.15],\n",
-       "       [1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00],\n",
-       "       [0.54, 0.54, 0.54, 0.54, 0.54, 0.54, 0.54, 0.54, 0.54, 0.54],\n",
-       "       [0.07, 0.07, 0.07, 0.07, 0.07, 0.07, 0.07, 0.07, 0.07, 0.07],\n",
-       "       [0.01, 0.01, 0.01, 0.01, 0.01, 0.01, 0.01, 0.01, 0.01, 0.01],\n",
-       "       [0.66, 0.66, 0.66, 0.66, 0.66, 0.66, 0.66, 0.66, 0.66, 0.66],\n",
-       "       [0.50, 0.50, 0.50, 0.50, 0.50, 0.50, 0.50, 0.50, 0.50, 0.50],\n",
-       "       [0.36, 0.36, 0.36, 0.36, 0.36, 0.36, 0.36, 0.36, 0.36, 0.36]])"
+       "array([[0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
+       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
+       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
+       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
+       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
+       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
+       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
+       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
+       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
+       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00]])"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,12 +555,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "# np.save(\"/home/ubuntu/Documents/jiarui/experiments/pFedDef/weights/cifar10/FedAvg_all_label_switch/pfeddef/acc.npy\", orig_acc)\n",
-    "np.save(\"/home/ubuntu/Documents/jiarui/experiments/FedAvg/cifar10/rep_lr_0010/eval/rep_lr0010_pair_acc.npy\", orig_acc)\n",
+    "np.save(\"/home/ubuntu/Documents/jiarui/experiments/FedAvg/cifar10/rep__client_w_lr_050/eval/all_acc.npy\", orig_acc)\n",
     "# np.load(\"/home/ubuntu/Documents/jiarui/experiments/FedAvg/cifar10/boosting80/eval/boosting80_all_acc.npy\")[:10,:10]\n"
    ]
   },
