misc: minor changes

--- a/Evaluation/Example - Loading Model and Trasfer Attack.ipynb
+++ b/Evaluation/Example - Loading Model and Trasfer Attack.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:00<00:00, 158.15it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████| 40/40 [00:00<00:00, 141.32it/s]\n"
      ]
     },
     {
@@ -80,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:05<00:00,  6.85it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:09<00:00,  4.40it/s]\n"
      ]
     },
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,12 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Model Weights\n",
     "num_models = 40\n",
+    "\n",
+    "root_path = \"/home/ubuntu/Documents/jiarui/experiments/FedAvg_adv/rep_atk/rep_scale0/weights\"\n",
     "\n",
     "np.set_printoptions(formatter={'float': lambda x: \"{0:0.2f}\".format(x)})\n",
     "\n",
@@ -237,8 +239,6 @@
     "        models_test += [new_model]\n",
     "\n",
     "elif setting == 'FedAvg':\n",
-    "    \n",
-    "    root_path = \"/home/ubuntu/Documents/jiarui/experiments/FedAvg/cifar10/rep__client_w_lr_050/weights\"\n",
     "    \n",
     "#     args_.save_path = 'weights/final/femnist/fig1_take3/fedavg_benign/'\n",
     "    args_.save_path = root_path\n",
@@ -279,7 +279,7 @@
     "    \n",
     "#     args_.save_path = 'weights/final/femnist/fig1_take3/fedem_benign/'\n",
     "#     args_.save_path = 'weights/final/femnist/fig1_take3/fedem_adv/'\n",
-    "    args_.save_path = 'weights/final/femnist/figperturb/fedem_avg_p0_1/'\n",
+    "    args_.save_path = root_path\n",
     "    aggregator.load_state(args_.save_path)\n",
     "    \n",
     "    # This is where the models are stored -- one for each mixture --> learner.model for nn\n",
@@ -293,7 +293,7 @@
     "\n",
     "#     weights = np.load(\"weights/final/femnist/fig1_take3/fedem_benign/train_client_weights.npy\")\n",
     "#     weights = np.load(\"weights/final/femnist/fig1_take3/fedem_adv/train_client_weights.npy\")\n",
-    "    weights = np.load(\"weights/final/femnist/figperturb/fedem_avg_p0_1/train_client_weights.npy\")\n",
+    "    weights = np.load(f\"{root_path}/train_client_weights.npy\")\n",
     "\n",
     "    # Set model weights\n",
     "    model_weights = []\n",
@@ -311,6 +311,10 @@
     "        new_model.eval()\n",
     "        new_weight_dict = copy.deepcopy(weights_h[0])\n",
     "        for key in weights_h[0]:\n",
+    "#             print(key)\n",
+    "#             print(weights_h[0][key])\n",
+    "#             print(weights_h[1][key])\n",
+    "#             print(weights_h[2][key])\n",
     "            new_weight_dict[key] = w0*weights_h[0][key] + w1*weights_h[1][key] + w2*weights_h[2][key]\n",
     "        new_model.load_state_dict(new_weight_dict)\n",
     "        models_test += [new_model]"
@@ -318,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -424,7 +428,7 @@
     "    t1.atk_params = PGD_Params()\n",
     "    t1.atk_params.set_params(\n",
     "        batch_size=batch_size,\n",
-    "        iteration = 0,\n",
+    "        iteration = 10,\n",
     "        target = 3, \n",
     "        x_val_min = torch.min(data_x), \n",
     "        x_val_max = torch.max(data_x),\n",
@@ -442,33 +446,33 @@
     "\n",
     "    # Log Performance\n",
     "    logs_adv[adv_idx]['orig_acc_transfers'] = copy.deepcopy(t1.orig_acc_transfers)\n",
-    "#     logs_adv[adv_idx]['orig_similarities'] = copy.deepcopy(t1.orig_similarities)\n",
-    "#     logs_adv[adv_idx]['adv_acc_transfers'] = copy.deepcopy(t1.adv_acc_transfers)\n",
-    "#     logs_adv[adv_idx]['adv_similarities_target'] = copy.deepcopy(t1.adv_similarities)        \n",
-    "#     logs_adv[adv_idx]['adv_target'] = copy.deepcopy(t1.adv_target_hit)\n",
+    "    logs_adv[adv_idx]['orig_similarities'] = copy.deepcopy(t1.orig_similarities)\n",
+    "    logs_adv[adv_idx]['adv_acc_transfers'] = copy.deepcopy(t1.adv_acc_transfers)\n",
+    "    logs_adv[adv_idx]['adv_similarities_target'] = copy.deepcopy(t1.adv_similarities)        \n",
+    "    logs_adv[adv_idx]['adv_target'] = copy.deepcopy(t1.adv_target_hit)\n",
     "\n",
-    "    # Miss attack Untargeted\n",
+    "#     Miss attack Untargeted\n",
     "    \n",
-    "#     t1.atk_params.set_params(\n",
-    "#         batch_size=batch_size, \n",
-    "#         iteration = 10,\n",
-    "#         target = -1, \n",
-    "#         x_val_min = torch.min(data_x), \n",
-    "#         x_val_max = torch.max(data_x),\n",
-    "#         step_size = 0.01, \n",
-    "#         step_norm = \"inf\", \n",
-    "#         eps = eps, \n",
-    "#         eps_norm = 2\n",
-    "#     )\n",
-    "#     t1.generate_xadv(atk_type = \"pgd\")\n",
-    "#     t1.send_to_victims(victim_idxs)\n",
-    "#     logs_adv[adv_idx]['adv_miss'] = copy.deepcopy(t1.adv_acc_transfers)\n",
-    "#     logs_adv[adv_idx]['adv_similarities_untarget'] = copy.deepcopy(t1.adv_similarities)"
+    "    t1.atk_params.set_params(\n",
+    "        batch_size=batch_size, \n",
+    "        iteration = 10,\n",
+    "        target = -1, \n",
+    "        x_val_min = torch.min(data_x), \n",
+    "        x_val_max = torch.max(data_x),\n",
+    "        step_size = 0.01, \n",
+    "        step_norm = \"inf\", \n",
+    "        eps = eps, \n",
+    "        eps_norm = 2\n",
+    "    )\n",
+    "    t1.generate_xadv(atk_type = \"pgd\")\n",
+    "    t1.send_to_victims(victim_idxs)\n",
+    "    logs_adv[adv_idx]['adv_miss'] = copy.deepcopy(t1.adv_acc_transfers)\n",
+    "    logs_adv[adv_idx]['adv_similarities_untarget'] = copy.deepcopy(t1.adv_similarities)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,17 +491,17 @@
     "for adv_idx in range(len(victim_idxs)):\n",
     "    for victim in range(len(victim_idxs)):\n",
     "        orig_acc[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[0]][victim_idxs[victim]].data.tolist()\n",
-    "#         orig_sim[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[1]][victim_idxs[victim]].data.tolist()\n",
-    "#         adv_acc[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[2]][victim_idxs[victim]].data.tolist()\n",
-    "#         adv_sim_target[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[3]][victim_idxs[victim]].data.tolist()\n",
-    "#         adv_sim_untarget[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[4]][victim_idxs[victim]].data.tolist()\n",
-    "#         adv_target[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[5]][victim_idxs[victim]].data.tolist()\n",
-    "#         adv_miss[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[6]][victim_idxs[victim]].data.tolist()"
+    "        orig_sim[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[1]][victim_idxs[victim]].data.tolist()\n",
+    "        adv_acc[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[2]][victim_idxs[victim]].data.tolist()\n",
+    "        adv_sim_target[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[3]][victim_idxs[victim]].data.tolist()\n",
+    "        adv_sim_untarget[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[4]][victim_idxs[victim]].data.tolist()\n",
+    "        adv_target[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[5]][victim_idxs[victim]].data.tolist()\n",
+    "        adv_miss[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[6]][victim_idxs[victim]].data.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -506,16 +510,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.76 0.76 0.76 0.76 0.76 0.76 0.76 0.76 0.76 0.76]\n",
-      " [0.89 0.89 0.89 0.89 0.89 0.89 0.89 0.89 0.89 0.89]\n",
-      " [0.78 0.78 0.78 0.78 0.78 0.78 0.78 0.78 0.78 0.78]\n",
-      " [0.67 0.67 0.67 0.67 0.67 0.67 0.67 0.67 0.67 0.67]\n",
-      " [0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80 0.80]\n",
-      " [0.73 0.73 0.73 0.73 0.73 0.73 0.73 0.73 0.73 0.73]\n",
-      " [0.88 0.88 0.88 0.88 0.88 0.88 0.88 0.88 0.88 0.88]\n",
-      " [0.78 0.78 0.78 0.78 0.78 0.78 0.78 0.78 0.78 0.78]\n",
-      " [0.76 0.76 0.76 0.76 0.76 0.76 0.76 0.76 0.76 0.76]\n",
-      " [0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83 0.83]]\n"
+      "[[0.29 0.29 0.29 0.29 0.29 0.29 0.29 0.29 0.29 0.29]\n",
+      " [0.30 0.30 0.30 0.30 0.30 0.30 0.30 0.30 0.30 0.30]\n",
+      " [0.32 0.32 0.32 0.32 0.32 0.32 0.32 0.32 0.32 0.32]\n",
+      " [0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00]\n",
+      " [0.30 0.30 0.30 0.30 0.30 0.30 0.30 0.30 0.30 0.30]\n",
+      " [0.30 0.30 0.30 0.30 0.30 0.30 0.30 0.30 0.30 0.30]\n",
+      " [0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41]\n",
+      " [0.24 0.24 0.24 0.24 0.24 0.24 0.24 0.24 0.24 0.24]\n",
+      " [0.32 0.32 0.32 0.32 0.32 0.32 0.32 0.32 0.32 0.32]\n",
+      " [0.30 0.30 0.30 0.30 0.30 0.30 0.30 0.30 0.30 0.30]]\n"
      ]
     }
    ],
@@ -526,25 +530,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
-       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
-       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
-       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
-       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
-       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
-       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
-       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
-       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00],\n",
-       "       [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00]])"
+       "array([[0.90, 0.90, 0.90, 0.90, 0.90, 0.90, 0.90, 0.90, 0.90, 0.90],\n",
+       "       [0.83, 0.83, 0.83, 0.83, 0.83, 0.83, 0.83, 0.83, 0.83, 0.83],\n",
+       "       [0.86, 0.86, 0.86, 0.86, 0.86, 0.86, 0.86, 0.86, 0.86, 0.86],\n",
+       "       [1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00, 1.00],\n",
+       "       [0.81, 0.81, 0.81, 0.81, 0.81, 0.81, 0.81, 0.81, 0.81, 0.81],\n",
+       "       [0.84, 0.84, 0.84, 0.84, 0.84, 0.84, 0.84, 0.84, 0.84, 0.84],\n",
+       "       [0.82, 0.82, 0.82, 0.82, 0.82, 0.82, 0.82, 0.82, 0.82, 0.82],\n",
+       "       [0.81, 0.81, 0.81, 0.81, 0.81, 0.81, 0.81, 0.81, 0.81, 0.81],\n",
+       "       [0.86, 0.86, 0.86, 0.86, 0.86, 0.86, 0.86, 0.86, 0.86, 0.86],\n",
+       "       [0.83, 0.83, 0.83, 0.83, 0.83, 0.83, 0.83, 0.83, 0.83, 0.83]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,12 +559,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.61 0.61 0.61 0.61 0.61 0.61 0.61 0.61 0.61 0.61]\n",
+      " [0.58 0.58 0.58 0.58 0.58 0.58 0.58 0.58 0.58 0.58]\n",
+      " [0.60 0.60 0.60 0.60 0.60 0.60 0.60 0.60 0.60 0.60]\n",
+      " [1.00 1.00 1.00 1.00 1.00 1.00 1.00 1.00 1.00 1.00]\n",
+      " [0.58 0.58 0.58 0.58 0.58 0.58 0.58 0.58 0.58 0.58]\n",
+      " [0.63 0.63 0.63 0.63 0.63 0.63 0.63 0.63 0.63 0.63]\n",
+      " [0.48 0.48 0.48 0.48 0.48 0.48 0.48 0.48 0.48 0.48]\n",
+      " [0.64 0.64 0.64 0.64 0.64 0.64 0.64 0.64 0.64 0.64]\n",
+      " [0.63 0.63 0.63 0.63 0.63 0.63 0.63 0.63 0.63 0.63]\n",
+      " [0.58 0.58 0.58 0.58 0.58 0.58 0.58 0.58 0.58 0.58]]\n",
+      "0.6197192803025245\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(adv_acc[:10, :10])\n",
+    "print(np.sum(adv_acc) / (adv_acc.shape[0] * adv_acc.shape[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# np.save(\"/home/ubuntu/Documents/jiarui/experiments/pFedDef/weights/cifar10/FedAvg_all_label_switch/pfeddef/acc.npy\", orig_acc)\n",
-    "np.save(\"/home/ubuntu/Documents/jiarui/experiments/FedAvg/cifar10/rep__client_w_lr_050/eval/all_acc.npy\", orig_acc)\n",
+    "np.save(\"/home/ubuntu/Documents/jiarui/experiments/FedAvg_adv/rep_atk/rep_scale0/eval/all_adv_acc.npy\", adv_acc)\n",
     "# np.load(\"/home/ubuntu/Documents/jiarui/experiments/FedAvg/cifar10/boosting80/eval/boosting80_all_acc.npy\")[:10,:10]\n"
    ]
   },
@@ -783,6 +815,66 @@
     "print(np.load(\"/home/ubuntu/Documents/jiarui/experiments/FedAvg/cifar10/boosting80/eval/boosting80_pair_acc.npy\")[:10,:10])\n",
     "print(\"boost 160\")\n",
     "print(np.load(\"/home/ubuntu/Documents/jiarui/experiments/FedAvg/cifar10/boosting160/eval/boosting160_pair_acc.npy\")[:10,:10])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33],\n",
+       "       [0.33, 0.33, 0.33]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mypath = \"/home/ubuntu/Documents/jiarui/experiments/oriCode/testFAT/pfeddef/weights\"\n",
+    "np.load(f\"{mypath}/train_client_weights.npy\")"
    ]
   },
   {
